tolk-tester/tests/invalid-declaration/err-1190.tolk
fun main() {
    var i;
}

/**
@compilation_should_fail
@stderr provide a type for a variable, because its default value is omitted:
@stderr var i: <type>;
 */
